# ijkplayer

./: .gitignore  README.md  init-android-llama.sh  init-android-mnn.sh  init-android.sh  version.sh
android/: android-ndk-prof  build-on-travis.sh  compile-ijk.sh  ijk-addr2line.sh  ijk-ndk-stack.sh
android/contrib/: .gitignore  build-llama-manual.sh  compile-ffmpeg.sh  compile-glslang.sh  compile-libsoxr.sh  compile-llama.sh  compile-mnn.sh  compile-openssl.sh
android/contrib/tools/: do-compile-ffmpeg.sh  do-compile-glslang.sh  do-compile-libsoxr.sh  do-compile-openssl.sh  do-detect-env.sh
android/ijkplayer/: build.gradle  gradle.properties
android/ijkplayer/gradle/wrapper/: gradle-wrapper.properties
android/ijkplayer/ijkplayer-arm64/: build.gradle
android/ijkplayer/ijkplayer-arm64/src/main/cpp/: CMakeLists.txt
android/ijkplayer/ijkplayer-arm64/src/main/jni/: Android.mk  Application.mk
android/ijkplayer/ijkplayer-arm64/src/main/jni/ffmpeg/: Android.mk
android/ijkplayer/ijkplayer-arm64/src/main/prefab/ijkplayer/include/ijkplayer/: ijkplayer.h
android/ijkplayer/ijkplayer-armv5/: build.gradle
android/ijkplayer/ijkplayer-armv5/src/main/jni/: Application.mk
android/ijkplayer/ijkplayer-armv7a/: build.gradle
android/ijkplayer/ijkplayer-armv7a/src/main/jni/: Android.mk
android/ijkplayer/ijkplayer-example/: build.gradle
android/ijkplayer/ijkplayer-example/src/main/: AndroidManifest.xml
android/ijkplayer/ijkplayer-example/src/main/cpp/: CMakeLists.txt  asrwhisper_jni.cpp  asrwhisper_stub.cpp
android/ijkplayer/ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/activities/: FileExplorerActivity.java  SampleMediaActivity.java  TestCaseListActivity.java  TestHubActivity.java  VideoActivity.java
android/ijkplayer/ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/application/: AppActivity.java  Settings.java
android/ijkplayer/ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/fragments/: DiagnosticsBottomSheetDialogFragment.java  FileListFragment.java  RecentMediaListFragment.java  SampleMediaListFragment.java  SettingsFragment.java  TestCaseListFragment.java  TestHubFragment.java  TracksBottomSheetDialogFragment.java  TracksFragment.java
android/ijkplayer/ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/player/: DefaultPlaybackPolicy.java  MediaSourceUtil.java  PlaybackPolicy.java  PlayerFactory.java  PlayerToggle.java
android/ijkplayer/ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/util/: AsrAudioTrackDecoder.java  DebugEventLog.java  GestureState.java  HttpFileDownloader.java  NativeFFmpegDiagnostics.java  RemoteAsrClient.java  VideoFilterState.java  WhisperAsrEngine.java
android/ijkplayer/ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/widget/media/: AndroidMediaController.java  IjkVideoView.java  InfoHudViewHolder.java
android/ijkplayer/ijkplayer-example/src/main/res/layout/: activity_app.xml  activity_player.xml  dialog_diagnostics.xml  dialog_tracks.xml  fragment_file_list.xml  fragment_file_list_item.xml  header_case_search.xml  header_test_hub.xml  list_item_header.xml  list_item_two_line.xml  widget_toolbar.xml
android/ijkplayer/ijkplayer-example/src/main/res/menu/: menu_app.xml  menu_player.xml
android/ijkplayer/ijkplayer-example/src/main/res/raw/: las_test_manifest.json  sample_media.json  test_feature_cases.json
android/ijkplayer/ijkplayer-example/src/main/res/values/: strings.xml  strings_pref.xml  styles.xml
android/ijkplayer/ijkplayer-example/src/main/res/xml/: settings.xml
android/ijkplayer/ijkplayer-exo/: build.gradle
android/ijkplayer/ijkplayer-exo/src/main/java/tv/danmaku/ijk/media/exo/: IjkExoMediaPlayer.java  IjkExoMediaPlayer2.java
android/ijkplayer/ijkplayer-java/: build.gradle
android/ijkplayer/ijkplayer-java/src/main/java/tv/danmaku/ijk/media/player/: AndroidMediaPlayer.java  IMediaPlayer.java  IjkAIEngine.java  IjkMediaPlayer.java  MediaPlayerProxy.java
android/ijkplayer/ijkplayer-java/src/main/java/tv/danmaku/ijk/media/player/ffmpeg/: FFmpegApi.java
android/ijkplayer/ijkplayer-x86/: build.gradle
android/ijkplayer/ijkplayer-x86/src/main/jni/: Application.mk
android/ijkplayer/ijkplayer-x86_64/: build.gradle
android/ijkplayer/ijkplayer-x86_64/src/main/jni/: Application.mk
config/: module-default.sh  module-lite-hevc.sh  module-lite.sh  module.sh
doc/: preflight_checklist.md
ijkmedia/compat/libavutil/: application.h
ijkmedia/ijkai/: README_PHASE1.md  ijkai.c  ijkai.h  ijkai_jni.c  ijkai_pipenode.c  ijkai_pipenode.h
ijkmedia/ijkai/async/: ijkai_queue.c  ijkai_queue.h
ijkmedia/ijkai/cv/: ijkai_cv.c  ijkai_cv.h  ijkai_cv_detect.c  ijkai_cv_detect.h  ijkai_cv_internal.h  ijkai_cv_mnn_wrap.cpp  ijkai_cv_mnn_wrap.h  ijkai_cv_sr.c  ijkai_cv_sr.h
ijkmedia/ijkai/llm/: ijkai_llm.c  ijkai_llm.cpp  ijkai_llm_impl.h
ijkmedia/ijkai/test/: CMakeLists.txt  run_tests.sh  test_ijkai_algo  test_ijkai_algo.c  test_ijkai_core  test_ijkai_core.c  test_ijkai_pipenode  test_ijkai_pipenode.c  test_ijkai_queue  test_ijkai_queue.c  test_runner.h  test_stubs.c  test_stubs.h
ijkmedia/ijkplayer/: Android.mk  config.h  ff_cmdutils.c  ff_ffinc.h  ff_ffplay.c  ff_ffplay.h  ff_ffplay_def.h  ijkmeta.c  ijkplayer.c  ijkplayer.h
ijkmedia/ijkplayer/android/: ffmpeg_api_jni.c  ijkplayer_jni.c
ijkmedia/ijkplayer/android/pipeline/: ffpipeline_android.c  ffpipeline_android.h  ffpipenode_android_mediacodec_vdec.c
ijkmedia/ijkplayer/ijkavformat/: allformats.c  ijkiocache.c  ijkiomanager_stub.c  ijkiourlhook.c  ijklas.c
ijkmedia/ijkplayer/ijkavutil/: ijkdict.c
ijkmedia/ijksdl/: ijksdl_egl.c
ijkmedia/ijksdl/ffmpeg/abi_all/: image_convert_stub.c
tools/: pull-repo-ref.sh
